@@ -45,14 +45,11 @@ import androidx.core.content.ContextCompat;
 import net.kdt.pojavlaunch.authenticator.microsoft.MicrosoftAuthTask;
 import net.kdt.pojavlaunch.authenticator.microsoft.ui.MicrosoftLoginGUIActivity;
 import net.kdt.pojavlaunch.authenticator.mojang.InvalidateTokenTask;
-import net.kdt.pojavlaunch.authenticator.mojang.LoginListener;
-import net.kdt.pojavlaunch.authenticator.mojang.LoginTask;
 import net.kdt.pojavlaunch.authenticator.mojang.RefreshListener;
 import net.kdt.pojavlaunch.customcontrols.CustomControls;
 import net.kdt.pojavlaunch.multirt.MultiRTConfigDialog;
 import net.kdt.pojavlaunch.multirt.MultiRTUtils;
 import net.kdt.pojavlaunch.prefs.LauncherPreferences;
-import net.kdt.pojavlaunch.utils.JREUtils;
 import net.kdt.pojavlaunch.utils.LocaleUtils;
 import net.kdt.pojavlaunch.value.MinecraftAccount;
 
@@ -64,31 +61,25 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 import java.util.Locale;
 
-public class PojavLoginActivity extends BaseActivity
-// MineActivity
-{
-    private static final int MY_PERMISSIONS_RECORD_AUDIO = 2;
+public class PojavLoginActivity extends BaseActivity {
     private final Object mLockStoragePerm = new Object();
     private final Object mLockSelectJRE = new Object();
-    
-    private EditText edit2, edit3;
+
+    private EditText edit2;
     private final int REQUEST_STORAGE_REQUEST_CODE = 1;
-    private CheckBox sRemember, sOffline;
+    private CheckBox sRemember;
     private TextView startupTextView;
     private SharedPreferences firstLaunchPrefs;
     private MinecraftAccount mProfile = null;
-    
+
     private boolean isSkipInit = false;
     private boolean isStarting = false;
 
     public static final String PREF_IS_INSTALLED_JAVARUNTIME = "isJavaRuntimeInstalled";
-    
+
     @Override
     protected void onCreate(Bundle savedInstanceState){
         super.onCreate(savedInstanceState); // false;
@@ -175,18 +166,18 @@ public class PojavLoginActivity extends BaseActivity
         }
     }
     private void uiInit() {
-        setContentView(R.layout.launcher_login_v3);
+        setContentView(R.layout.activity_pojav_login);
 
         Spinner spinnerChgLang = findViewById(R.id.login_spinner_language);
 
         String defaultLang = LocaleUtils.DEFAULT_LOCALE.getDisplayName();
         SpannableString defaultLangChar = new SpannableString(defaultLang);
         defaultLangChar.setSpan(new StyleSpan(android.graphics.Typeface.BOLD), 0, defaultLang.length(), 0);
-        
+
         final ArrayAdapter<DisplayableLocale> langAdapter = new ArrayAdapter<>(this, android.R.layout.simple_spinner_item);
         langAdapter.add(new DisplayableLocale(LocaleUtils.DEFAULT_LOCALE, defaultLangChar));
         langAdapter.add(new DisplayableLocale(Locale.ENGLISH));
-        
+
         try {
             BufferedReader reader = new BufferedReader(new InputStreamReader(getAssets().open("language_list.txt")));
             String line;
@@ -201,9 +192,9 @@ public class PojavLoginActivity extends BaseActivity
         } catch (IOException e) {
             Tools.showError(this, e);
         }
-        
+
         langAdapter.setDropDownViewResource(android.R.layout.simple_list_item_single_choice);
-        
+
         int selectedLang = 0;
         for (int i = 0; i < langAdapter.getCount(); i++) {
             if (Locale.getDefault().getDisplayLanguage().equals(langAdapter.getItem(i).mLocale.getDisplayLanguage())) {
@@ -211,7 +202,7 @@ public class PojavLoginActivity extends BaseActivity
                 break;
             }
         }
-        
+
         spinnerChgLang.setAdapter(langAdapter);
         spinnerChgLang.setSelection(selectedLang);
         spinnerChgLang.setOnItemSelectedListener(new Spinner.OnItemSelectedListener(){
@@ -222,7 +213,7 @@ public class PojavLoginActivity extends BaseActivity
                     isInitCalled = true;
                     return;
                 }
-                
+
                 Locale locale;
                 if (position == 0) {
                     locale = LocaleUtils.DEFAULT_LOCALE;
@@ -231,43 +222,36 @@ public class PojavLoginActivity extends BaseActivity
                 } else {
                     locale = langAdapter.getItem(position).mLocale;
                 }
-                
+
                 LauncherPreferences.PREF_LANGUAGE = locale.getLanguage();
                 LauncherPreferences.DEFAULT_PREF.edit().putString("language", LauncherPreferences.PREF_LANGUAGE).apply();
-                
+
                 // Restart to apply language change
                 finish();
                 startActivity(getIntent());
             }
-            
+
             @Override
             public void onNothingSelected(AdapterView<?> adapter) {}
         });
-            
+
         edit2 = (EditText) findViewById(R.id.login_edit_email);
-        edit3 = (EditText) findViewById(R.id.login_edit_password);
-        
+
         sRemember = findViewById(R.id.login_switch_remember);
-        sOffline  = findViewById(R.id.login_switch_offline);
-        sOffline.setOnCheckedChangeListener((p1, p2) -> {
-            // May delete later
-            edit3.setEnabled(!p2);
-        });
-            
         isSkipInit = true;
     }
-    
+
     @Override
     public void onResume() {
         super.onResume();
-        
+
         Tools.updateWindowSize(this);
-        
+
         // Clear current profile
         PojavProfile.setCurrentProfile(this, null);
     }
 
-   
+
     private void unpackComponent(AssetManager am, String component) throws IOException {
         File versionFile = new File(Tools.DIR_GAME_HOME + "/" + component + "/version");
         InputStream is = am.open("components/" + component + "/version");
@@ -276,7 +260,7 @@ public class PojavLoginActivity extends BaseActivity
                 FileUtils.deleteDirectory(versionFile.getParentFile());
             }
             versionFile.getParentFile().mkdir();
-            
+
             Log.i("UnpackPrep", component + ": Pack was installed manually, or does not exist, unpacking new...");
             String[] fileList = am.list("components/" + component);
             for(String s : fileList) {
@@ -291,7 +275,7 @@ public class PojavLoginActivity extends BaseActivity
                     FileUtils.deleteDirectory(versionFile.getParentFile());
                 }
                 versionFile.getParentFile().mkdir();
-                
+
                 String[] fileList = am.list("components/" + component);
                 for (String s : fileList) {
                     Tools.copyAssetFile(this, "components/" + component + "/" + s, Tools.DIR_GAME_HOME + "/" + component, true);
@@ -320,14 +304,14 @@ public class PojavLoginActivity extends BaseActivity
     private void initMain() throws Throwable {
         mkdirs(Tools.DIR_ACCOUNT_NEW);
         PojavMigrator.migrateAccountData(this);
-        
+
         mkdirs(Tools.DIR_GAME_HOME);
         mkdirs(Tools.DIR_GAME_HOME + "/lwjgl3");
         mkdirs(Tools.DIR_GAME_HOME + "/config");
         if (!PojavMigrator.migrateGameDir()) {
             mkdirs(Tools.DIR_GAME_NEW);
             mkdirs(Tools.DIR_GAME_NEW + "/mods");
-            mkdirs(Tools.DIR_HOME_VERSION + "/fabric");
+            mkdirs(Tools.DIR_HOME_VERSION);
             mkdirs(Tools.DIR_HOME_LIBRARY);
         }
 
@@ -335,8 +319,7 @@ public class PojavLoginActivity extends BaseActivity
 
         try {
             new CustomControls(this).save(Tools.CTRLDEF_FILE);
-
-            Tools.copyAssetFile(this, "jsons/fabric-loader-0.13.3.json", Tools.DIR_HOME_VERSION + "/fabric", false);
+            Tools.copyAssetFile(this, "jsons/fabric-loader-0.13.3.json", Tools.DIR_HOME_VERSION + "/fabric-loader-0.13.3", false);
 
             Tools.copyAssetFile(this, "components/security/pro-grade.jar", Tools.DIR_DATA, true);
             Tools.copyAssetFile(this, "components/security/java_sandbox.policy", Tools.DIR_DATA, true);
@@ -348,40 +331,19 @@ public class PojavLoginActivity extends BaseActivity
             Tools.copyAssetFile(this,"arc_dns_injector.jar",Tools.DIR_DATA, true);
 
             // Install Mods
-            Tools.copyAssetFile(this, "artifacts/mcxr-core-0.1.1+null.jar", DIR_GAME_NEW + "/mods", false);
-            Tools.copyAssetFile(this, "artifacts/mcxr-play-0.1.3+null.jar", DIR_GAME_NEW + "/mods", false);
-            Tools.copyAssetFile(this, "artifacts/titleworlds-0.0.1.jar", DIR_GAME_NEW + "/mods", false);
-            Tools.copyAssetFile(this, "artifacts/lazydfu-0.1.3-SNAPSHOT.jar", DIR_GAME_NEW + "/mods", false);
+            Tools.copyAssetFile(this, "artifacts/mcxr-core-0.2.0+null.jar", DIR_GAME_NEW + "/mods", false);
+            Tools.copyAssetFile(this, "artifacts/mcxr-play-0.2.0+null.jar", DIR_GAME_NEW + "/mods", false);
+            Tools.copyAssetFile(this, "artifacts/titleworlds-0.0.2.jar", DIR_GAME_NEW + "/mods", false);
+            Tools.copyAssetFile(this, "artifacts/lazydfu-0.1.2.jar", DIR_GAME_NEW + "/mods", false);
 
             AssetManager am = this.getAssets();
-            
+
             unpackComponent(am, "caciocavallo");
             unpackComponent(am, "lwjgl3");
             if(!installRuntimeAutomatically(am,MultiRTUtils.getRuntimes().size() > 0)) {
-               MultiRTConfigDialog.openRuntimeSelector(this, MultiRTConfigDialog.MULTIRT_PICK_RUNTIME_STARTUP);
+                MultiRTConfigDialog.openRuntimeSelector(this, MultiRTConfigDialog.MULTIRT_PICK_RUNTIME_STARTUP);
                 synchronized (mLockSelectJRE) {
                     mLockSelectJRE.wait();
-                }
-            }
-            if (ContextCompat.checkSelfPermission(this,
-                    Manifest.permission.RECORD_AUDIO)
-                    != PackageManager.PERMISSION_GRANTED) {
-
-                //When permission is not granted by user, show them message why this permission is needed.
-                if (ActivityCompat.shouldShowRequestPermissionRationale(this,
-                        Manifest.permission.RECORD_AUDIO)) {
-                    Toast.makeText(this, "Please grant permissions to record audio", Toast.LENGTH_LONG).show();
-
-                    //Give user option to still opt-in the permissions
-                    ActivityCompat.requestPermissions(this,
-                            new String[]{Manifest.permission.RECORD_AUDIO},
-                            MY_PERMISSIONS_RECORD_AUDIO);
-
-                } else {
-                    // Show user dialog to grant permission to record audio
-                    ActivityCompat.requestPermissions(this,
-                            new String[]{Manifest.permission.RECORD_AUDIO},
-                            MY_PERMISSIONS_RECORD_AUDIO);
                 }
             }
             if(Build.VERSION.SDK_INT > 28) runOnUiThread(this::showStorageDialog);
@@ -399,44 +361,12 @@ public class PojavLoginActivity extends BaseActivity
             bldr.setMessage(sp);
             bldr.setCancelable(false);
             bldr.setPositiveButton(android.R.string.ok, (dialog, which)->{
-               firstLaunchPrefs.edit().putBoolean("storageDialogShown",true).apply();
-               dialog.dismiss();
+                firstLaunchPrefs.edit().putBoolean("storageDialogShown",true).apply();
+                dialog.dismiss();
             });
             bldr.show();
         }
     }
-
-    public int launchJavaRuntime(File modFile, String javaArgs) {
-        JREUtils.redirectAndPrintJRELog(this);
-        try {
-            List<String> javaArgList = new ArrayList<String>();
-
-            // Enable Caciocavallo
-            Tools.getCacioJavaArgs(javaArgList,false);
-
-            if (javaArgs != null) {
-                javaArgList.addAll(Arrays.asList(javaArgs.split(" ")));
-            } else {
-                javaArgList.add("-jar");
-                javaArgList.add(modFile.getAbsolutePath());
-            }
-
-            Logger.getInstance().appendToLog("Info: Java arguments: " + Arrays.toString(javaArgList.toArray(new String[0])));
-
-            // Run java on sandbox, non-overrideable.
-            Collections.reverse(javaArgList);
-            javaArgList.add("-Xbootclasspath/a:" + Tools.DIR_DATA + "/pro-grade.jar");
-            javaArgList.add("-Djava.security.manager=net.sourceforge.prograde.sm.ProGradeJSM");
-            javaArgList.add("-Djava.security.policy=" + Tools.DIR_DATA + "/java_sandbox.policy");
-            Collections.reverse(javaArgList);
-
-            return JREUtils.launchJavaVM(this, javaArgList);
-        } catch (Throwable th) {
-            Tools.showError(this, th, true);
-            return -1;
-        }
-    }
-
     @Override
     protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent data) {
         super.onActivityResult(requestCode, resultCode, data);
@@ -497,16 +427,16 @@ public class PojavLoginActivity extends BaseActivity
         File file = new File(path);
         // check necessary???
         if(file.getParentFile().exists())
-             return file.mkdir();
+            return file.mkdir();
         else return file.mkdirs();
     }
 
-    
+
     public void loginMicrosoft(View view) {
         Intent i = new Intent(this,MicrosoftLoginGUIActivity.class);
         startActivityForResult(i,MicrosoftLoginGUIActivity.AUTHENTICATE_MICROSOFT_REQUEST);
     }
-    
+
     @Override
     protected void onNewIntent(Intent intent) {
         super.onNewIntent(intent);
@@ -551,24 +481,24 @@ public class PojavLoginActivity extends BaseActivity
             return listView.getChildAt(childIndex);
         }
     }
-    
+
     public void loginSavedAcc(View view) {
         String[] accountArr = new File(Tools.DIR_ACCOUNT_NEW).list();
         if(accountArr.length == 0){
-           showNoAccountDialog();
-           return;
+            showNoAccountDialog();
+            return;
         }
 
         final Dialog accountDialog = new Dialog(PojavLoginActivity.this);
 
-        accountDialog.setContentView(R.layout.simple_account_list_holder);
+        accountDialog.setContentView(R.layout.dialog_select_account);
 
         LinearLayout accountListLayout = accountDialog.findViewById(R.id.accountListLayout);
         LayoutInflater inflater = (LayoutInflater) this.getSystemService(LAYOUT_INFLATER_SERVICE);
 
         for (int accountIndex = 0; accountIndex < accountArr.length; accountIndex++) {
             String s = accountArr[accountIndex];
-            View child = inflater.inflate(R.layout.simple_account_list_item, accountListLayout,false);
+            View child = inflater.inflate(R.layout.item_minecraft_account, accountListLayout,false);
             TextView accountName = child.findViewById(R.id.accountitem_text_name);
             ImageButton removeButton = child.findViewById(R.id.accountitem_button_remove);
             ImageView imageView = child.findViewById(R.id.account_head);
@@ -600,11 +530,9 @@ public class PojavLoginActivity extends BaseActivity
                         };
 
                         MinecraftAccount acc = MinecraftAccount.load(selectedAccName);
-                        if (acc.isMicrosoft){
+                        if (acc.accessToken.length() >= 5){
                             new MicrosoftAuthTask(PojavLoginActivity.this, authListener)
                                     .execute("true", acc.msaRefreshToken);
-                        } else if (acc.accessToken.length() >= 5) {
-                            PojavProfile.updateTokens(PojavLoginActivity.this, selectedAccName, authListener);
                         } else {
                             accountDialog.dismiss();
                             PojavProfile.launch(PojavLoginActivity.this, selectedAccName);
@@ -644,10 +572,10 @@ public class PojavLoginActivity extends BaseActivity
         accountDialog.getWindow().setBackgroundDrawable(new ColorDrawable(Color.TRANSPARENT));
         accountDialog.show();
     }
-    
-    private MinecraftAccount loginOffline() {
+
+    private MinecraftAccount loginLocal() {
         new File(Tools.DIR_ACCOUNT_OLD).mkdir();
-        
+
         String text = edit2.getText().toString();
         if (text.isEmpty()) {
             edit2.setError(getString(R.string.global_error_field_empty));
@@ -655,60 +583,23 @@ public class PojavLoginActivity extends BaseActivity
             edit2.setError(getString(R.string.login_error_invalid_username));
         } else if (new File(Tools.DIR_ACCOUNT_NEW + "/" + text + ".json").exists()) {
             edit2.setError(getString(R.string.login_error_exist_username));
-        } else if (!edit3.getText().toString().isEmpty()) {
-            edit3.setError(getString(R.string.login_error_offline_password));
         } else {
             MinecraftAccount builder = new MinecraftAccount();
             builder.isMicrosoft = false;
             builder.username = text;
-            
+
             return builder;
         }
         return null;
     }
-    
+
 
     public void loginMC(final View v)
     {
-        
-        if (sOffline.isChecked()) {
-            mProfile = loginOffline();
-            playProfile(false);
-        } else {
-            ProgressBar prb = findViewById(R.id.launcherAccProgress);
-            new LoginTask().setLoginListener(new LoginListener(){
-
-
-                    @Override
-                    public void onBeforeLogin() {
-                        v.setEnabled(false);
-                        prb.setVisibility(View.VISIBLE);
-                    }
-
-                    @Override
-                    public void onLoginDone(String[] result) {
-                        if(result[0].equals("ERROR")){
-                            Tools.dialogOnUiThread(PojavLoginActivity.this,
-                                getResources().getString(R.string.global_error), strArrToString(result));
-                        } else{
-                            MinecraftAccount builder = new MinecraftAccount();
-                            builder.accessToken = result[1];
-                            builder.clientToken = result[2];
-                            builder.profileId = result[3];
-                            builder.username = result[4];
-                            builder.updateSkinFace();
-                            mProfile = builder;
-                        }
-                        runOnUiThread(() -> {
-                            v.setEnabled(true);
-                            prb.setVisibility(View.GONE);
-                            playProfile(false);
-                        });
-                    }
-                }).execute(edit2.getText().toString(), edit3.getText().toString());
-        }
+        mProfile = loginLocal();
+        playProfile(false);
     }
-    
+
     private void playProfile(boolean notOnLogin) {
         if (mProfile != null) {
             try {
@@ -716,22 +607,22 @@ public class PojavLoginActivity extends BaseActivity
                 if (sRemember.isChecked() || notOnLogin) {
                     profileName = mProfile.save();
                 }
-                
+
                 PojavProfile.launch(PojavLoginActivity.this, profileName == null ? mProfile : profileName);
             } catch (IOException e) {
                 Tools.showError(this, e);
             }
         }
     }
-    
+
     public static String strArrToString(String[] strArr)
     {
         String[] strArrEdit = strArr.clone();
         strArrEdit[0] = "";
-        
+
         String str = Arrays.toString(strArrEdit);
         str = str.substring(1, str.length() - 1).replace(",", "\n");
-        
+
         return str;
     }
     //We are calling this method to check the permission status
@@ -743,14 +634,14 @@ public class PojavLoginActivity extends BaseActivity
 
         //If permission is granted returning true
         return result1 == PackageManager.PERMISSION_GRANTED &&
-            result2 == PackageManager.PERMISSION_GRANTED;
+                result2 == PackageManager.PERMISSION_GRANTED;
     }
 
     //Requesting permission
     private void requestStoragePermission()
     {
         ActivityCompat.requestPermissions(this, new String[]{
-            Manifest.permission.WRITE_EXTERNAL_STORAGE, Manifest.permission.READ_EXTERNAL_STORAGE}, REQUEST_STORAGE_REQUEST_CODE);
+                Manifest.permission.WRITE_EXTERNAL_STORAGE, Manifest.permission.READ_EXTERNAL_STORAGE}, REQUEST_STORAGE_REQUEST_CODE);
     }
 
     // This method will be called when the user will tap on allow or deny
